--- a/package.json
+++ b/package.json
@@ -4,5 +4,14 @@
   "description": "Back web ",
   "main": "index.js",
   "author": "Irving Herrera",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.19.0",
+    "connect-multiparty": "^2.2.0",
+    "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.25.3",
+    "mongoose": "^5.9.13"
+  }
 }
