--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.25.3",
     "mongoose": "^5.9.13"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
