--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
+    "global": "^4.4.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.25.3",
-    "mongoose": "^5.9.13"
+    "mongoose": "^5.9.13",
+    "nodemon": "^2.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   }
 }
