--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.25.3",
     "mongoose": "^5.9.13",
+    "mongoose-paginate": "^5.0.3",
     "nodemon": "^2.0.3"
   },
   "scripts": {
